<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="OpenDrawer">open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="app_name">Hindu Prayer</string>
    <string name="banner">ca-app-pub-3575133882203307/5325432260</string>
    <string name="banner1">ca-app-pub-3575133882203307/8262720242</string>
    <string name="banner2">ca-app-pub-3575133882203307/7141495678</string>
    <string name="banner3">ca-app-pub-3575133882203307/9528843067</string>
    <string name="testad_Banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bannerUnitId">ca-app-pub-3575133882203307/6190331530</string>
    <string name="Hanuman">हनुमान चालीसा</string>
    <string name="email"> प्रार्थना ऊपर दिए हुए लिस्ट मे उपलब्ध नहीं है तो कृपया नीचे दिये हुए ईमेल आइडी मे प्रार्थना का नाम एवं एप की समस्या मेल से सूचित करे\n</string>
    <string name="sunday">ॐ रां राहवे नमः।\n</string>
    <string name="sundays">ॐ कें केतवे नमः।\n</string>
    <string name="mantra">मंत्र</string>
    <string name="rahudev">राहुदेव (Rahudev)</string>
    <string name="ketudev">केतुदेव (Ketudev)</string>
    <string name="rahustrot">राहू स्त्रोत</string>
    <string name="n_n_n">राहू को विधुतूंद, असुर, कविलादत्त, सेहिकेय, फणि आदि नामों से जाना जाता है। राहू के पिता विप्रचिती नाम का दानव था। समुद्र मंथन के समय देवरूप धारण कर अमृत पान कर लिया। सूर्य एण्ड चंद्र ने इसकी सूचना भगवान विष्णु को दी और भगवान विष्णु मे विश्वमोहिनी रूप धारण कर चक्र से उसका सिर काट दिया। तब से ग्रह के दो रूप हो गए। धड़ से ऊपर का भाग राहू एवं नीचे का भाग केतु। \n\n राहू का प्रकोप भयानक होता है इसके प्रभाव के कारण मनुष्य शत्रुता, दुख, अन्याय के संकट मे फस जाता है इसलिए राहू मंत्र का जाप करना चाहिए।</string>
    <string name="n_n_n_n_n_n_n_n_n_n_n">केतु: काल: कलयिता धूम्र केतु: र्विवर्णक:।\n लोक केतु: महाकेतु: सर्वकेतु: भयप्रद: ।।\n\n रौद्रो रूद्रप्रियो रूद्र: क्रूरकर्मा सुगन्ध्रक्।\n पलाश धूम्र संकाशश्चित्रयज्ञोपवीतधृक् ।।\n\n तारागण विमर्दो च जैमिनेय: महाधिप:।\n पंचविंशति नामानि केतो य: सततं पठेत् ।।\n\n तस्य नश्यंति बाधा च सर्व केतु प्रसादत:।\n धन धान्य पशूनां च भवेत् वृद्धि: न संशय: ।।\n</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="professional_developer">Professional Developer</string>
    <string name="youtube">Youtube</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="social_media">Social Media</string>
    <string name="homes">Home</string>
    <string name="calendars">Calendar</string>
    <string name="festivalss">Festival</string>
    <string name="audio">Audio</string>
    <string name="setting">Setting</string>
    <string name="email_us">Email Us (Click Here)</string>
    <string name="shivc" tools:ignore="Typos">॥दोहा॥\n\n श्री गणेश गिरिजा सुवन, मंगल मूल सुजान।\n कहत अयोध्यादास तुम, देहु अभय वरदान॥\n\n ।।चौपाई।। \n\n जय गिरिजा पति दीन दयाला।\n सदा करत सन्तन प्रतिपाला॥\n भाल चन्द्रमा सोहत नीके।\n कानन कुण्डल नागफनी के॥\n\n अंग गौर शिर गंग बहाये।\n मुण्डमाल तन छार लगाये॥\n वस्त्र खाल बाघम्बर सोहे।\n छवि को देख नाग मुनि मोहे॥\n\n मैना मातु की ह्वै दुलारी।\n बाम अंग सोहत छवि न्यारी॥\n कर त्रिशूल सोहत छवि भारी।\n करत सदा शत्रुन क्षयकारी॥\n\n नन्दि गणेश सोहै तहँ कैसे।\n सागर मध्य कमल हैं जैसे॥\n कार्तिक श्याम और गणराऊ।\n या छवि को कहि जात न काऊ॥\n\n देवन जबहीं जाय पुकारा।\n तब ही दुख प्रभु आप निवारा॥\n किया उपद्रव तारक भारी।\n देवन सब मिलि तुमहिं जुहारी॥\n\n तुरत षडानन आप पठायउ।\n लवनिमेष महँ मारि गिरायउ॥\n आप जलंधर असुर संहारा।\n सुयश तुम्हार विदित संसारा॥\n\n त्रिपुरासुर सन युद्ध मचाई।\n सबहिं कृपा कर लीन बचाई॥\n किया तपहिं भागीरथ भारी।\n पुरब प्रतिज्ञा तसु पुरारी॥\n\n दानिन महं तुम सम कोउ नाहीं।\n सेवक स्तुति करत सदाहीं॥\n वेद नाम महिमा तव गाई।\n अकथ अनादि भेद नहिं पाई॥\n\n प्रगट उदधि मंथन में ज्वाला।\n जरे सुरासुर भये विहाला॥\n कीन्ह दया तहँ करी सहाई।\n नीलकण्ठ तब नाम कहाई॥\n\n पूजन रामचंद्र जब कीन्हा।\n जीत के लंक विभीषण दीन्हा॥\n सहस कमल में हो रहे धारी।\n कीन्ह परीक्षा तबहिं पुरारी॥\n\n एक कमल प्रभु राखेउ जोई।\n कमल नयन पूजन चहं सोई॥\n कठिन भक्ति देखी प्रभु शंकर।\n भये प्रसन्न दिए इच्छित वर॥\n\n जय जय जय अनंत अविनाशी।\n करत कृपा सब के घटवासी॥\n दुष्ट सकल नित मोहि सतावै ।\n भ्रमत रहे मोहि चैन न आवै॥\n\n त्राहि त्राहि मैं नाथ पुकारो।\n यहि अवसर मोहि आन उबारो॥\n लै त्रिशूल शत्रुन को मारो।\n संकट से मोहि आन उबारो॥\n\n मातु पिता भ्राता सब कोई।\n संकट में पूछत नहिं कोई॥\n स्वामी एक है आस तुम्हारी।\n आय हरहु अब संकट भारी॥\n\n धन निर्धन को देत सदाहीं।\n जो कोई जांचे वो फल पाहीं॥\n अस्तुति केहि विधि करौं तुम्हारी।\n क्षमहु नाथ अब चूक हमारी॥\n\n शंकर हो संकट के नाशन।\n मंगल कारण विघ्न विनाशन॥\n योगी यति मुनि ध्यान लगावैं।\n नारद शारद शीश नवावैं॥\n\n नमो नमो जय नमो शिवाय।\n सुर ब्रह्मादिक पार न पाय॥\n जो यह पाठ करे मन लाई।\n ता पार होत है शम्भु सहाई॥\n\n ॠनिया जो कोई हो अधिकारी।\n पाठ करे सो पावन हारी॥\n पुत्र हीन कर इच्छा कोई।\n निश्चय शिव प्रसाद तेहि होई॥\n\n पण्डित त्रयोदशी को लावे।\n ध्यान पूर्वक होम करावे ॥\n त्रयोदशी ब्रत करे हमेशा।\n तन नहीं ताके रहे कलेशा॥\n\n धूप दीप नैवेद्य चढ़ावे।\n शंकर सम्मुख पाठ सुनावे॥\n जन्म जन्म के पाप नसावे।\n अन्तवास शिवपुर में पावे॥\n\n कहे अयोध्या आस तुम्हारी।\n जानि सकल दुःख हरहु हमारी॥\n\n ॥दोहा॥\n\n नित्त नेम कर प्रातः ही, पाठ करौं चालीसा।\n तुम मेरी मनोकामना, पूर्ण करो जगदीश॥\n मगसर छठि हेमन्त ॠतु, संवत चौसठ जान।\n अस्तुति चालीसा शिवहि, पूर्ण कीन कल्याण॥\n</string>
    <string name="shivcs">शिव चालीसा</string>
    <string name="n">ॐ नमः शिवाय ।\n</string>
    <string name="sm">शिव मंत्र</string>
    <string name="sa">शिव जी की आरती</string>
    <string name="shar">जय शिव ओंकारा, ॐ जय शिव ओंकारा ।\n ब्रह्मा, विष्णु, सदाशिव, अर्द्धांगी धारा ॥\n ॥ ॐ जय शिव ओंकारा ॥\n\n एकानन चतुरानन पंचानन राजे ।\n हंसासन गरूड़ासन वृषवाहन साजे ॥\n ॥ ॐ जय शिव ओंकारा ॥\n\n दो भुज चार चतुर्भुज दसभुज अति सोहे ।\n त्रिगुण रूप निरखते त्रिभुवन जन मोहे ॥\n ॥ ॐ जय शिव ओंकारा ॥\n\n अक्षमाला वनमाला मुण्डमाला धारी ।\n त्रिपुरारी कंसारी कर माला धारी ॥\n ॥ ॐ जय शिव ओंकारा ॥\n\n सुखकारी दुखहारी जगपालन कारी ॥\n कर के मध्य कमंडलु चक्र त्रिशूलधारी ।\n ॥ ॐ जय शिव ओंकारा ॥\n\n सनकादिक गरुणादिक भूतादिक संगे ॥\n श्वेतांबर पीताबर बाघंबर अंगे ।\n ॥ ॐ जय शिव ओंकारा ॥\n\n ब्रह्मा विष्णु सदाशिव जानत अविवेका ।\n प्रणवाक्षर में शोभित ये तीनों एका ॥\n ॥ ॐ जय शिव ओंकारा ॥\n\n लक्ष्मी व सावित्री पार्वती संगा ।\n पार्वती अर्द्धांगी, शिवलहरी गंगा ॥\n ॥ ॐ जय शिव ओंकारा ॥\n\n त्रिगुणस्वामी जी की आरती जो कोइ नर गावे ।\n कहत शिवानंद स्वामी सुख संपति पावे ॥\n ॥ ॐ जय शिव ओंकारा ॥\n\n</string>
    <string name="rm">राम मंत्र</string>
    <string name="rms" tools:ignore="Typos">श्री राम जय राम जय जय राम । \n\nश्री रामचन्द्राय नमः। \n</string>
    <string name="srja">श्री राम जी की आरती</string>
    <string name="src">श्री राम चालीसा</string>
    <string name="rjaaa" tools:ignore="Typos">॥ दोहा ॥\n\n आदौ राम तपोवनादि गमनं हत्वाह् मृगा काञ्चनं\n वैदेही हरणं जटायु मरणं सुग्रीव संभाषणं\n बाली निर्दलं समुद्र तरणं लङ्कापुरी दाहनम्\n पश्चद्रावनं कुम्भकर्णं हननं एतद्धि रामायणं\n\n ॥ चौपाई ॥\n\n श्री रघुबीर भक्त हितकारी ।\n सुनि लीजै प्रभु अरज हमारी ॥\n निशि दिन ध्यान धरै जो कोई ।\n ता सम भक्त और नहिं होई ॥\n\n ध्यान धरे शिवजी मन माहीं ।\n ब्रह्मा इन्द्र पार नहिं पाहीं ॥\n जय जय जय रघुनाथ कृपाला ।\n सदा करो सन्तन प्रतिपाला ॥\n\n दूत तुम्हार वीर हनुमाना ।\n जासु प्रभाव तिहूँ पुर जाना ॥\n तुव भुजदण्ड प्रचण्ड कृपाला ।\n रावण मारि सुरन प्रतिपाला ॥\n\n तुम अनाथ के नाथ गोसाईं ।\n दीनन के हो सदा सहाई ॥\n ब्रह्मादिक तव पार न पावैं ।\n सदा ईश तुम्हरो यश गावैं ॥\n\n चारिउ वेद भरत हैं साखी ।\n तुम भक्तन की लज्जा राखी ॥\n गुण गावत शारद मन माहीं ।\n सुरपति ताको पार न पाहीं ॥\n\n नाम तुम्हार लेत जो कोई ।\n ता सम धन्य और नहिं होई ॥\n राम नाम है अपरम्पारा ।\n चारिहु वेदन जाहि पुकारा ॥\n\n गणपति नाम तुम्हारो लीन्हों ।\n तिनको प्रथम पूज्य तुम कीन्हों ॥\n शेष रटत नित नाम तुम्हारा ।\n महि को भार शीश पर धारा ॥\n\n फूल समान रहत सो भारा ।\n पावत कोउ न तुम्हरो पारा ॥\n भरत नाम तुम्हरो उर धारो ।\n तासों कबहुँ न रण में हारो ॥\n\n नाम शत्रुहन हृदय प्रकाशा ।\n सुमिरत होत शत्रु कर नाशा ॥\n लषन तुम्हारे आज्ञाकारी ।\n सदा करत सन्तन रखवारी ॥\n\n ताते रण जीते नहिं कोई ।\n युद्ध जुरे यमहूँ किन होई ॥\n महा लक्ष्मी धर अवतारा ।\n सब विधि करत पाप को छारा ॥\n\n सीता राम पुनीता गायो ।\n भुवनेश्वरी प्रभाव दिखायो ॥\n घट सों प्रकट भई सो आई ।\n जाको देखत चन्द्र लजाई ॥\n\n सो तुमरे नित पांव पलोटत ।\n नवो निद्धि चरणन में लोटत ॥\n सिद्धि अठारह मंगल कारी ।\n सो तुम पर जावै बलिहारी ॥\n\n औरहु जो अनेक प्रभुताई ।\n सो सीतापति तुमहिं बनाई ॥\n इच्छा ते कोटिन संसारा ।\n रचत न लागत पल की बारा ॥\n\n जो तुम्हरे चरनन चित लावै ।\n ताको मुक्ति अवसि हो जावै ॥\n सुनहु राम तुम तात हमारे ।\n तुमहिं भरत कुल- पूज्य प्रचारे ॥\n\n तुमहिं देव कुल देव हमारे ।\n तुम गुरु देव प्राण के प्यारे ॥\n जो कुछ हो सो तुमहीं राजा ।\n जय जय जय प्रभु राखो लाजा ॥\n\n रामा आत्मा पोषण हारे ।\n जय जय जय दशरथ के प्यारे ॥\n जय जय जय प्रभु ज्योति स्वरूपा ।\n निगुण ब्रह्म अखण्ड अनूपा ॥\n\n सत्य सत्य जय सत्य- ब्रत स्वामी ।\n सत्य सनातन अन्तर्यामी ॥\n सत्य भजन तुम्हरो जो गावै ।\n सो निश्चय चारों फल पावै ॥\n\n सत्य शपथ गौरीपति कीन्हीं ।\n तुमने भक्तहिं सब सिद्धि दीन्हीं ॥\n ज्ञान हृदय दो ज्ञान स्वरूपा ।\n नमो नमो जय जापति भूपा ॥\n\n धन्य धन्य तुम धन्य प्रतापा ।\n नाम तुम्हार हरत संतापा ॥\n सत्य शुद्ध देवन मुख गाया ।\n बजी दुन्दुभी शंख बजाया ॥\n\n सत्य सत्य तुम सत्य सनातन ।\n तुमहीं हो हमरे तन मन धन ॥\n याको पाठ करे जो कोई ।\n ज्ञान प्रकट ताके उर होई ॥\n\n आवागमन मिटै तिहि केरा ।\n सत्य वचन माने शिव मेरा ॥\n और आस मन में जो ल्यावै ।\n तुलसी दल अरु फूल चढ़ावै ॥\n\n साग पत्र सो भोग लगावै ।\n सो नर सकल सिद्धता पावै ॥\n अन्त समय रघुबर पुर जाई ।\n जहाँ जन्म हरि भक्त कहाई ॥\n\n श्री हरि दास कहै अरु गावै ।\n सो वैकुण्ठ धाम को पावै ॥\n\n ॥ दोहा ॥\n\n सात दिवस जो नेम कर पाठ करे चित लाय ।\n हरिदास हरिकृपा से अवसि भक्ति को पाय ॥\n राम चालीसा जो पढ़े रामचरण चित लाय ।\n जो इच्छा मन में करै सकल सिद्ध हो जाय ॥\n</string>
    <string name="ra" tools:ignore="Typos">श्री राम चंद्र कृपालु भजमन \nहरण भाव भय दारुणम् ।\n नवकंज लोचन कंज मुखकर, \nकंज पद कन्जारुणम् ।।\n\n कंदर्प अगणित अमित छवी \nनव नील नीरज सुन्दरम् ।\n पट्पीत मानहु तडित रूचि शुचि \nनौमी जनक सुतावरम् ।।\n\n भजु दीन बंधु दिनेश \nदानव दैत्य वंश निकंदनम् ।\n रघुनंद आनंद कंद कौशल \nचंद दशरथ नन्दनम् ।।\n\n सिर मुकुट कुण्डल तिलक \nचारु उदारू अंग विभूषणं ।\n आजानु भुज शर चाप धर \nसंग्राम जित खर-धूषणं ।।\n\n इति वदति तुलसीदास शंकर \nशेष मुनि मन रंजनम् ।\n मम ह्रदय कुंज निवास कुरु \nकामादी खल दल गंजनम् ।।\n\n मनु जाहिं राचेऊ मिलिहि \nसो बरु सहज सुंदर सावरों ।\n करुना निधान सुजान सिलू \nसनेहू जानत रावरो ।।\n\n एही भांती गौरी असीस सुनी \nसिय सहित हिय हरषी अली ।\n तुलसी भवानी पूजि पूनी पूनी \nमुदित मन मंदिर चली ।।\n\n जानि गौरी अनुकूल सिय \nहिय हरषु न जाइ कहि। \n मंजुल मंगल मूल वाम \nअंग फरकन लगे ।।\n\n श्री राम चंद्र कृपालु भजमन \nहरण भाव भय दारुणम् ।\n नवकंज लोचन कंज मुखकर, \nकंज पद कन्जारुणम् ।।\n</string>
    <string name="temple">Temple</string>
    <string name="support">Support</string>
</resources>