<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/homes"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/calendar"
            android:title="@string/calendars"
            android:icon="@drawable/ic_calendar"/>

        <item
            android:id="@+id/festival"
            android:title="@string/festivalss"
            android:icon="@drawable/ic_today"/>

        <item
            android:id="@+id/temple"
            android:title="@string/temple"
            android:icon="@drawable/ic_temple"/>

        <item
            android:id="@+id/support"
            android:title="@string/support"
            android:icon="@drawable/ic_support"/>


    </group>



</menu>