<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color"
            android:gravity="center"
            android:textAppearance="@style/textcolor"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/rm"
            android:textSize="19sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:textAppearance="@style/textcolor"
            android:text="@string/rms"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color"
            android:gravity="center"
            android:paddingTop="4dp"
            android:textAppearance="@style/textcolor"
            android:paddingBottom="4dp"
            android:text="@string/src"
            android:textSize="19sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:textAppearance="@style/textcolor"
            android:text="@string/rjaaa"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color"
            android:gravity="center"
            android:paddingTop="4dp"
            android:textAppearance="@style/textcolor"
            android:paddingBottom="4dp"
            android:text="@string/srja"
            android:textSize="19sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:textAppearance="@style/textcolor"
            android:text="@string/ra"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />



    </LinearLayout>

</ScrollView>