<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KetudevFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/color"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textAppearance="@style/textcolor"
            android:text="@string/ketudev"
            android:textSize="19sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="30dp"
            android:justificationMode="inter_word"
            tools:targetApi="o"
            android:textAppearance="@style/textcolor"
            android:text="@string/राहूमंत्र"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:background="@color/color"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textAppearance="@style/textcolor"
            android:text="@string/mantra"
            android:textSize="19sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingTop="30dp"
            android:textAppearance="@style/textcolor"
            android:text="@string/sundays"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/color"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textAppearance="@style/textcolor"
            android:text="@string/केतुस्त्रोत"
            android:textSize="19sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingTop="30dp"
            android:textAppearance="@style/textcolor"
            android:text="@string/n_n_n_n_n_n_n_n_n_n_n"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</ScrollView>